feat(linphone_package): better code for deal with customizations (app name, url...) and packaging

--- a/cmake_builder/linphone_package/windows/packaging.cmake.in
+++ b/cmake_builder/linphone_package/windows/packaging.cmake.in
@@ -22,13 +22,13 @@
 
 if (NOT "${CMAKE_INSTALL_PREFIX}" MATCHES .*/_CPack_Packages/.*)
   execute_process(
-    COMMAND ${CMAKE_CPACK_COMMAND} -G NSIS
+    COMMAND ${CMAKE_CPACK_COMMAND} -G ${CPACK_GENERATOR}
     RESULT_VARIABLE CPACK_COMMAND_SUCCESS
   )
 
   if (@PERFORM_SIGNING@)
     execute_process(
-      COMMAND @SIGNTOOL_COMMAND@ @CMAKE_CURRENT_BINARY_DIR@/@CPACK_PACKAGE_FILE_NAME@.exe
+      COMMAND @SIGNTOOL_COMMAND@ @CMAKE_CURRENT_BINARY_DIR@/@CPACK_PACKAGE_FILE_NAME@.@PACKAGE_EXT@
     )
   endif ()
 endif ()
