--- a/cmake_builder/linphone_package/macos/Info.plist.in
+++ b/cmake_builder/linphone_package/macos/Info.plist.in
@@ -11,7 +11,7 @@
 	<key>CFBundleExecutable</key>
 	<string>@EXECUTABLE_NAME@</string>
 	<key>CFBundleGetInfoString</key>
-	<string>@PACKAGE_VERSION@, (C) 2011-2018 The linphone team http://www.linphone.org</string>
+	<string>@PACKAGE_VERSION@, (C) 2011-2018 @APPLICATION_NAME@ @APPLICATION_URL@</string>
 	<key>CFBundleIconFile</key>
 	<string>linphone.icns</string>
 	<key>CFBundleIdentifier</key>
@@ -27,7 +27,7 @@
 	<key>CFBundleVersion</key>
 	<string>@PACKAGE_VERSION@</string>
 	<key>NSHumanReadableCopyright</key>
-	<string>Copyright 2011-2018 Belledonne Communications</string>
+	<string>Copyright 2011-2018 @APPLICATION_VENDOR@</string>
 	<key>LSMinimumSystemVersion</key>
 	<string>@CMAKE_OSX_DEPLOYMENT_TARGET@</string>
 	<key>NSAppSleepDisabled</key>
