feat(linphone_package): use NSIS generator by default

--- a/cmake_builder/linphone_package/CMakeLists.txt
+++ b/cmake_builder/linphone_package/CMakeLists.txt
@@ -292,7 +292,7 @@ if (APPLE)
 endif ()
 
 if (WIN32)
-  set(CPACK_GENERATOR "WIX")
+  set(CPACK_GENERATOR "NSIS")
   set(CPACK_PACKAGE_FILE_NAME "${CPACK_PACKAGE_NAME}-${LINPHONE_GIT_REVISION}-win32")
 
   string(COMPARE EQUAL ${CPACK_GENERATOR} "NSIS" IS_NSIS)
