fix(linphone_package): fix package generation

--- a/cmake_builder/linphone_package/CMakeLists.txt
+++ b/cmake_builder/linphone_package/CMakeLists.txt
@@ -165,7 +165,7 @@ if (WIN32)
     list(APPEND SHARE_CONTENT_EXCLUDE PATTERN "${ITEM}" EXCLUDE)
   endforeach ()
 
-  install(DIRECTORY "${LINPHONE_OUTPUT_DIR}"
+  install(DIRECTORY "${LINPHONE_OUTPUT_DIR}/"
     DESTINATION "."
     PATTERN "bin/*_tester.exe" EXCLUDE
     PATTERN "bin/belcard*.exe" EXCLUDE
