--- a/cmake_builder/linphone_package/windows/packaging.cmake.in
+++ b/cmake_builder/linphone_package/windows/packaging.cmake.in
@@ -22,7 +22,7 @@
 
 if (NOT "${CMAKE_INSTALL_PREFIX}" MATCHES .*/_CPack_Packages/.*)
   execute_process(
-    COMMAND ${CMAKE_CPACK_COMMAND} -G ${CPACK_GENERATOR}
+    COMMAND ${CMAKE_CPACK_COMMAND} -G @CPACK_GENERATOR@
     RESULT_VARIABLE CPACK_COMMAND_SUCCESS
   )
 
