--- a/cmake_builder/CMakeLists.txt
+++ b/cmake_builder/CMakeLists.txt
@@ -22,7 +22,7 @@
 
 lcb_define_target("linphoneqt" "linphone" "ms2plugins")
 
-lcb_blacklist_dependencies("libxsd" "soci") # linphone do not need them for the moment.
+lcb_blacklist_dependencies("libxsd") # linphone do not need them for the moment.
 
 if (NOT WIN32 AND NOT APPLE)
   lcb_blacklist_dependencies("turbo-jpeg") # turbo-jpeg is already provided by Qt5 so do not build it.
