Use linphone-sdk.

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,115 +1,6 @@
-[submodule "submodules/belle-sip"]
-	path = submodules/belle-sip
-	url = https://gitlab.linphone.org/BC/public/belle-sip.git
-[submodule "submodules/cmake-builder"]
-	path = submodules/cmake-builder
-	url = https://gitlab.linphone.org/BC/public/linphone-cmake-builder.git
-[submodule "submodules/linphone"]
-	path = submodules/linphone
-	url = https://gitlab.linphone.org/BC/public/linphone.git
-[submodule "submodules/bcg729"]
-	path = submodules/bcg729
-	url = https://gitlab.linphone.org/BC/public/bcg729.git
-[submodule "submodules/bzrtp"]
-	path = submodules/bzrtp
-	url = https://gitlab.linphone.org/BC/public/bzrtp.git
-[submodule "submodules/msamr"]
-	path = submodules/msamr
-	url = https://gitlab.linphone.org/BC/public/msamr.git
-[submodule "submodules/msopenh264"]
-	path = submodules/msopenh264
-	url = https://gitlab.linphone.org/BC/public/msopenh264.git
-[submodule "submodules/mssilk"]
-	path = submodules/mssilk
-	url = https://gitlab.linphone.org/BC/public/mssilk.git
-[submodule "submodules/msx264"]
-	path = submodules/msx264
-	url = https://gitlab.linphone.org/BC/public/msx264.git
-[submodule "submodules/mswebrtc"]
-	path = submodules/mswebrtc
-	url = https://gitlab.linphone.org/BC/public/mswebrtc.git
-[submodule "submodules/belcard"]
-	path = submodules/belcard
-	url = https://gitlab.linphone.org/BC/public/belcard.git
-[submodule "submodules/belr"]
-	path = submodules/belr
-	url = https://gitlab.linphone.org/BC/public/belr.git
-[submodule "submodules/bctoolbox"]
-	path = submodules/bctoolbox
-	url = https://gitlab.linphone.org/BC/public/bctoolbox.git
-[submodule "submodules/externals/mbedtls"]
-	path = submodules/externals/mbedtls
-	url = https://gitlab.linphone.org/BC/public/external/mbedtls.git
-[submodule "submodules/externals/bv16-floatingpoint"]
-	path = submodules/externals/bv16-floatingpoint
-	url = https://gitlab.linphone.org/BC/public/external/bv16-floatingpoint.git
-[submodule "submodules/externals/speex"]
-	path = submodules/externals/speex
-	url = https://gitlab.linphone.org/BC/public/external/speex.git
-[submodule "submodules/externals/ffmpeg"]
-	path = submodules/externals/ffmpeg
-	url = https://gitlab.linphone.org/BC/public/external/ffmpeg.git
-	ignore = dirty
-[submodule "submodules/externals/libvpx"]
-	path = submodules/externals/libvpx
-	url = https://gitlab.linphone.org/BC/public/external/libvpx.git
-[submodule "submodules/externals/opus"]
-	path = submodules/externals/opus
-	url = https://gitlab.linphone.org/BC/public/external/opus.git
-	ignore = dirty
-[submodule "submodules/externals/gsm"]
-	path = submodules/externals/gsm
-	url = https://gitlab.linphone.org/BC/public/external/gsm.git
-[submodule "submodules/externals/srtp"]
-	path = submodules/externals/srtp
-	url = https://gitlab.linphone.org/BC/public/external/srtp.git
-[submodule "submodules/externals/v4l-utils"]
-	path = submodules/externals/v4l-utils
-	url = https://gitlab.linphone.org/BC/public/external/v4l-utils.git
-[submodule "submodules/externals/libxml2"]
-	path = submodules/externals/libxml2
-	url = https://gitlab.linphone.org/BC/public/external/libxml2.git
-	ignore = dirty
-[submodule "submodules/externals/zlib"]
-	path = submodules/externals/zlib
-	url = https://gitlab.linphone.org/BC/public/external/zlib.git
-	ignore = dirty
-[submodule "submodules/externals/openh264"]
-	path = submodules/externals/openh264
-	url = https://gitlab.linphone.org/BC/public/external/openh264.git
-[submodule "submodules/bcunit"]
-	path = submodules/bcunit
-	url = https://gitlab.linphone.org/BC/public/bcunit.git
-[submodule "submodules/belle-msrp"]
-	path = submodules/belle-msrp
-	url = https://gitlab.linphone.org/BC/public/belle-msrp.git
-[submodule "submodules/externals/libjpeg-turbo"]
-	path = submodules/externals/libjpeg-turbo
-	url = https://gitlab.linphone.org/BC/public/external/libjpeg-turbo.git
-[submodule "submodules/ortp"]
-	path = submodules/ortp
-	url = https://gitlab.linphone.org/BC/public/ortp.git
-[submodule "submodules/mediastreamer2"]
-	path = submodules/mediastreamer2
-	url = https://gitlab.linphone.org/BC/public/mediastreamer2.git
-[submodule "submodules/mswasapi"]
-	path = submodules/mswasapi
-	url = https://gitlab.linphone.org/BC/public/mswasapi.git
-[submodule "submodules/bcmatroska2"]
-	path = submodules/bcmatroska2
-	url = https://gitlab.linphone.org/BC/public/bcmatroska2.git
-[submodule "submodules/externals/xerces-c"]
-	path = submodules/externals/xerces-c
-	url = https://gitlab.linphone.org/BC/public/external/xerces-c.git
-[submodule "submodules/externals/libxsd"]
-	path = submodules/externals/libxsd
-	url = https://gitlab.linphone.org/BC/public/external/libxsd.git
-[submodule "submodules/externals/soci"]
-	path = submodules/externals/soci
-	url = https://gitlab.linphone.org/BC/public/external/soci.git
 [submodule "submodules/externals/minizip"]
 	path = submodules/externals/minizip
 	url = https://gitlab.linphone.org/BC/public/external/minizip.git
-[submodule "submodules/externals/sqlite3"]
-	path = submodules/externals/sqlite3
-	url = https://gitlab.linphone.org/BC/public/external/sqlite3.git
+[submodule "linphone-sdk"]
+	path = linphone-sdk
+	url = git@gitlab.linphone.org:BC/public/linphone-sdk.git
