--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,32 +1,20 @@
 variables:
   GIT_SUBMODULE_STRATEGY: recursive
-
-
-.linux-ccache:
-  cache:
-    key: $CI_JOB_NAME
-    paths:
-      - ccache/
-
-  before_script:
-    - mkdir -p ccache
-    - export CCACHE_BASEDIR=${PWD}
-    - export CCACHE_DIR=${PWD}/ccache
+  MAKEFILE_JOBS: 5
+  DEFAULT_LINUX_CMAKE_OPTIONS: -DCMAKE_C_COMPILER_LAUNCHER= -DCMAKE_CXX_COMPILER_LAUNCHER= -DENABLE_NON_FREE_CODECS=YES -DENABLE_OPENH264=YES
+  DEFAULT_MACOS_CMAKE_OPTIONS: -DCMAKE_OSX_DEPLOYMENT_TARGET=10.11 -DENABLE_UPDATE_CHECK=YES
+  DEFAULT_WINDOWS_CMAKE_OPTIONS: -DENABLE_NON_FREE_CODECS=YES -DENABLE_OPENH264=YES -DENABLE_UPDATE_CHECK=YES
 
 
 .job-linux-desktop:
 
   tags: [ "docker" ]
 
-  extends: .linux-ccache
-
   script:
     - export CC=$CC
     - export CXX=$CXX
-    - ccache -s
-    - ./prepare.py -G "$CMAKE_GENERATOR" -cc -DENABLE_NON_FREE_CODECS=YES -DENABLE_OPENH264=YES
+    - ./prepare.py -G "$CMAKE_GENERATOR" -cc $DEFAULT_LINUX_CMAKE_OPTIONS $CMAKE_OPTIONS
     - cmake --build WORK/desktop/cmake -- $ADDITIONAL_BUILD_OPTIONS
-    - ccache -s
 
 
 .scheduled-job-linux-desktop:
@@ -43,6 +31,7 @@ job-debian9-makefile-gcc:
     CMAKE_GENERATOR: Unix Makefiles
     CC: gcc
     CXX: g++
+    ADDITIONAL_BUILD_OPTIONS: -j$MAKEFILE_JOBS
   extends: .scheduled-job-linux-desktop
 
 
@@ -53,6 +42,7 @@ job-debian9-makefile-clang:
     CMAKE_GENERATOR: Unix Makefiles
     CC: clang
     CXX: clang++
+    ADDITIONAL_BUILD_OPTIONS: -j$MAKEFILE_JOBS
   extends: .scheduled-job-linux-desktop
 
 
@@ -84,7 +74,7 @@ job-debian9-ninja-clang:
     - ccache -s
     - export Qt5_DIR=/usr/local/opt/qt/lib/cmake
     - export PATH=$PATH:/usr/local/opt/qt/bin
-    - python prepare.py -G "$CMAKE_GENERATOR" -cc --package -DCMAKE_OSX_DEPLOYMENT_TARGET=10.11 -DENABLE_UPDATE_CHECK=YES
+    - python prepare.py -G "$CMAKE_GENERATOR" -cc --package $DEFAULT_MACOS_CMAKE_OPTIONS $CMAKE_OPTIONS
     - cmake --build WORK/desktop/cmake -- $ADDITIONAL_BUILD_OPTIONS
     - ccache -s
 
@@ -107,6 +97,7 @@ job-macosx-makefile:
 
   variables:
     CMAKE_GENERATOR: Unix Makefiles
+    ADDITIONAL_BUILD_OPTIONS: -j$MAKEFILE_JOBS
   extends: .scheduled-job-macosx
 
 
@@ -126,7 +117,7 @@ job-macosx-xcode:
   script:
     - export Qt5_DIR=/usr/local/opt/qt/lib/cmake
     - export PATH=$PATH:/usr/local/opt/qt/bin
-    - python prepare.py -G Xcode -cc --package -DCMAKE_OSX_DEPLOYMENT_TARGET=10.11 -DENABLE_UPDATE_CHECK=YES
+    - python prepare.py -G Xcode -cc --package $DEFAULT_MACOS_CMAKE_OPTIONS $CMAKE_OPTIONS
     - cmake --build WORK/desktop/cmake -- -IDEBuildOperationMaxNumberOfConcurrentCompileTasks=`sysctl -n hw.ncpu`
 
   artifacts:
@@ -144,7 +135,7 @@ job-windows-vs2015:
   script:
     - echo %Qt5_DIR%
     - echo %PATH%
-    - python prepare.py -G "Visual Studio 14 2015" --package -DENABLE_NON_FREE_CODECS=YES -DENABLE_OPENH264=YES -DENABLE_UPDATE_CHECK=YES
+    - python prepare.py -G "Visual Studio 14 2015" --package %DEFAULT_WINDOWS_CMAKE_OPTIONS% %CMAKE_OPTIONS%
     - cmake --build WORK/desktop/cmake --config Release -- /maxcpucount
 
   artifacts:
